Added Embedded Media for projects -Added relevent tweets and youtube videos to the content in the projects section

--- a/index.html
+++ b/index.html
@@ -46,40 +46,71 @@
 
             <details>
                 <summary>Project Keystone</summary>
-                <p>A small puzzle-action game made in Unity, where the player shifts rows and columns of different tiles to arrange them in specific patterns to clear them away.
-                This project is made on my own time, for fun! The technology is simple, implementing a basic search system to find matching patterns in the play area. 
-                A short clip of the first playable prototype can be see <a target="_blank" href="https://twitter.com/Brennan_Bertram/status/1382816902179790849?s=20">here</a>.</p>
+                <p>
+                    A small puzzle-action game made in Unity, where the player shifts rows and columns of different tiles to arrange them in specific patterns to clear them away.
+                    This project is made on my own time, for fun! The technology is simple, implementing a basic search system to find matching patterns in the play area.
+                </p>                   
+
+                <blockquote class="twitter-tweet" data-dnt="true" data-theme="dark">
+                    <p lang="en" dir="ltr">
+                        One of the personal projects I&#39;ve been working on is a game prototype.
+                        This here is a first playable build of a small action puzzle game! 
+                        <a href="https://t.co/sUOPXUjOxo">pic.twitter.com/sUOPXUjOxo</a>
+                    </p>
+                    &mdash; Brennan Bertram (@Brennan_Bertram) <a href="https://twitter.com/Brennan_Bertram/status/1382816902179790849?ref_src=twsrc%5Etfw">April 15, 2021</a>                
+                </blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </details>
 
             <details>
                 <summary>Yoink! Museum Heist</summary>
-                <p>A small party-game made in Unreal Engine 4 as a university project.
-                As part of team of nineteen people, we worked together to create this game in the timeframe of about four months.
-                As one of the three engineers, I was tasked with creating backend game systems, helping manage source control,
-                and sometimes debugging/optimizing blueprints created by the designers.
-                I also occasionally provided design input which made it into the final game. 
-                A video showcase of the game can be seen <a target="_blank" href="https://www.youtube.com/watch?v=52NqAlOfWWQ">here</a>.</p>
-            </details>
-            
+                <p>
+                    A small party-game made in Unreal Engine 4 as a university project.
+                    As part of team of nineteen people, we worked together to create this game in the timeframe of about four months.
+                    As one of the three engineers, I was tasked with creating backend game systems, helping manage source control,
+                    and sometimes debugging/optimizing blueprints created by the designers.
+                    I also occasionally provided design input which made it into the final game.
+                </p>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/52NqAlOfWWQ" title="YouTube video player" frameborder="0"
+                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+            </details>            
 
             <details>
                 <summary>EggsCompany</summary>
-                <p>A turn-based tactical game prototype, made in Unity, as a university project.
-                As part of a team of three people, we were tasked with creating a game that showed off several AI programming techniques.
-                My role was to implement pathfinding, and the game implements an A* pathfinding algorithm.
-                Part of this also required implementation of a search system, which was also robust enough to be able to implement other searches,
-                able to provide elements of environmental information to the player and AI necessary for decision making. 
-                A short clip of this system in action can be seen <a target="_blank" href="https://twitter.com/Brennan_Bertram/status/1380340920508325889?s=20">here</a>.</p>
+                <p>
+                    A turn-based tactical game prototype, made in Unity, as a university project.
+                    As part of a team of three people, we were tasked with creating a game that showed off several AI programming techniques.
+                    My role was to implement pathfinding, and the game implements an A* pathfinding algorithm.
+                    Part of this also required implementation of a search system, which was also robust enough to be able to implement other searches,
+                    able to provide elements of environmental information to the player and AI necessary for decision making.
+                </p>
+
+                <blockquote class="twitter-tweet" data-dnt="true" data-theme="dark">
+                    <p lang="en" dir="ltr">
+                        One of my group projects during final year was about AI in games. My task was pathfinding, and I implemented an A* search algorithm using a node-based system to make it happen. 
+                        That search system ended up getting a lot of use in other gameplay systems too, like decision making. 
+                        <a href="https://t.co/GyuKzwSOqg">pic.twitter.com/GyuKzwSOqg</a>
+                    </p>
+                    &mdash; Brennan Bertram (@Brennan_Bertram) <a href="https://twitter.com/Brennan_Bertram/status/1380340920508325889?ref_src=twsrc%5Etfw">April 9, 2021</a>
+                </blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </details>
 
             <details>
                 <summary>Gatherin’ Game</summary>
-                <p>A technical demo made in Unity with SQLite, which served as my final university project.
-                This project was aimed at researching and implementing an external database as a backend system in a game.
-                The game includes several gameplay features through this system, including world and player persistence, achievements,
-                leaderboards, and additional features required to facilitate these,
-                such as a user account system and concurrent programming techniques to avoid application locks while queries were run. 
-                The entire project can be seen on a github repository <a target="_blank" href="https://github.com/btbertram/TeesU-GPP">here</a>.</p>
+                <p>
+                    A technical demo made in Unity with SQLite, which served as my final university project.
+                    This project was aimed at researching and implementing an external database as a backend system in a game.
+                    The game includes several gameplay features through this system, including world and player persistence, achievements,
+                    leaderboards, and additional features required to facilitate these,
+                    such as a user account system and concurrent programming techniques to avoid application locks while queries were run.
+                    The entire project can be seen on a github repository <a target="_blank" href="https://github.com/btbertram/TeesU-GPP">here</a>.
+                </p>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tmxtAPeecyA" title="YouTube video player" frameborder="0" 
+                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+
             </details>
 
         </div>
