--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     I also occasionally provided design input which made it into the final game.
                 </p>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/52NqAlOfWWQ" title="YouTube video player" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/52NqAlOfWWQ" title="YouTube video player" frameborder="0"
                         allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
             </details>            
 
@@ -108,7 +108,7 @@
                     The entire project can be seen on a github repository <a target="_blank" href="https://github.com/btbertram/TeesU-GPP">here</a>.
                 </p>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/tmxtAPeecyA" title="YouTube video player" frameborder="0" 
+                <iframe src="https://www.youtube.com/embed/tmxtAPeecyA" title="YouTube video player" frameborder="0" 
                         allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
 
             </details>
