Bugfix for dnt -Less rich tweet content now appears while "Do Not Track" is enabled as opposed to remaining display: none

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Brennan T. Bertram</h1>
         <h4>|Game Developer|</h4>
         <h4>|Programmer|</h4>
-        <h4>|Software Engineer|</h4>      
+        <h4>|Software Engineer|</h4>
     </header>
 
 
@@ -62,7 +62,7 @@
                     This project is made on my own time, for fun! The technology is simple, implementing a basic search system to find matching patterns in the play area.
                 </p>
 
-                <blockquote class="twitter-tweet jsremove" data-dnt="true" data-theme="dark">
+                <blockquote class="jsremove twitter-tweet" data-dnt="true" data-theme="dark">
                     <p lang="en" dir="ltr">
                         One of the personal projects I&#39;ve been working on is a game prototype.
                         This here is a first playable build of a small action puzzle game!
@@ -156,7 +156,6 @@
     <footer>
         <p>Website &#169 2021 Brennan Bertram. All Rights Reserved. <br /> We do not collect or host personal information. <a target="_blank" href="./html/tos.html">Terms of Service</a>.</p>
     </footer>
-
 
     <script>
         (function ActivateJS() {
