-Added MazeGen project to site

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div id="aboutcontent" class="headlinecontent">
             <p>
                 I’m a Software Developer with a BSc in Computer Games Programming from Teesside University Middlesbrough,
-                with some experience in Software Engineering. I have experience working with C#, C++, Unity Game Engine, Unreal Engine 4,
-                and other tools and languages used to create games or other applications. When I’m not working on my personal projects,
+                with experience in Software Engineering. I have experience working with C#, C++, Unity Game Engine, Unreal Engine 4,
+                and other tools and languages used to create games and other applications. When I’m not working on my personal projects,
                 I enjoy playing video games, travel, and using birdwatching to relax.
             </p>
         </div>
@@ -54,6 +54,59 @@
         </div>
 
         <div id="projectcontent" class="headlinecontent">
+
+            <details>
+                <summary>Yoink! Museum Heist</summary>
+                <p>
+                    A small party-game made in Unreal Engine 4 as a university project.
+                    As part of team of nineteen people, we worked together to create this game in the timeframe of about four months.
+                    As one of the three engineers, I was tasked with creating backend game systems, helping manage source control,
+                    and sometimes debugging/optimizing blueprints created by the designers.
+                    I also occasionally provided design input which made it into the final game.
+                </p>
+
+                <iframe class="jsremove" src="https://www.youtube.com/embed/52NqAlOfWWQ" title="YouTube video player" frameborder="0"
+                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+
+                <noscript>
+                    <p>
+                        A gameplay showcase video can be seen on YouTube <a href="https://www.youtube.com/embed/52NqAlOfWWQ" target="_blank">at this link</a>.
+                    </p>
+                </noscript>
+
+            </details>
+
+            <details>
+                <summary>Gatherin’ Game</summary>
+                <p>
+                    A technical demo made in Unity with SQLite, which served as my final university project.
+                    This project was aimed at researching and implementing an external database as a backend system in a game.
+                    The game includes several gameplay features through this system, including world and player persistence, achievements,
+                    leaderboards, and additional features required to facilitate these,
+                    such as a user account system and concurrent programming techniques to avoid application locks while queries were run.
+                    The entire project can be seen on a github repository <a target="_blank" href="https://github.com/btbertram/TeesU-GPP">at this link</a>.
+                </p>
+
+                <iframe class="jsremove" src="https://www.youtube.com/embed/tmxtAPeecyA" title="YouTube video player" frameborder="0"
+                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+
+                <noscript>
+                    <p>
+                        A video showcase of the project can be seen on YouTube <a href="https://www.youtube.com/embed/tmxtAPeecyA" target="_blank">at this link</a>.
+                    </p>
+                </noscript>
+
+            </details>
+
+            <details>
+                <summary>MazeGen</summary>
+                <p>
+                    A game system made in Ureal Engine 4. Using c++ and the UE4 API, this system randomly generates a simple maze and spawns it in an a UE4 level.
+                    A key part of this system allows blueprint classes derived from key c++ classes to included in the generation algorithm,
+                    letting enginners and designers work in tandem, while still keeping maintainable code.
+                    This entire project can be seen on my github repository <a href="https://github.com/btbertram/UE4MazegenProject">at this link</a>.
+                </p>
+            </details>
 
             <details>
                 <summary>Project Keystone</summary>
@@ -73,28 +126,7 @@
 
                 <noscript>
                     <p>
-                        A small clip of this prototype can be seen on my Twitter <a href="https://twitter.com/Brennan_Bertram/status/1382816902179790849?ref_src=twsrc%5Etfw" target="_blank">with this link</a>.
-                    </p>
-                </noscript>
-
-            </details>
-
-            <details>
-                <summary>Yoink! Museum Heist</summary>
-                <p>
-                    A small party-game made in Unreal Engine 4 as a university project.
-                    As part of team of nineteen people, we worked together to create this game in the timeframe of about four months.
-                    As one of the three engineers, I was tasked with creating backend game systems, helping manage source control,
-                    and sometimes debugging/optimizing blueprints created by the designers.
-                    I also occasionally provided design input which made it into the final game.
-                </p>
-
-                <iframe class="jsremove" src="https://www.youtube.com/embed/52NqAlOfWWQ" title="YouTube video player" frameborder="0"
-                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-
-                <noscript>
-                    <p>
-                        A gameplay showcase video can be seen on YouTube <a href="https://www.youtube.com/embed/52NqAlOfWWQ" target="_blank">with this link</a>.
+                        A small clip of this prototype can be seen on my Twitter <a href="https://twitter.com/Brennan_Bertram/status/1382816902179790849?ref_src=twsrc%5Etfw" target="_blank">at this link</a>.
                     </p>
                 </noscript>
 
@@ -121,29 +153,7 @@
 
                 <noscript>
                     <p>
-                        A small clip of the project demo can be seen on my Twitter <a href="https://twitter.com/Brennan_Bertram/status/1380340920508325889?ref_src=twsrc%5Etfw" target="_blank">with this link</a>.
-                    </p>
-                </noscript>
-
-            </details>
-
-            <details>
-                <summary>Gatherin’ Game</summary>
-                <p>
-                    A technical demo made in Unity with SQLite, which served as my final university project.
-                    This project was aimed at researching and implementing an external database as a backend system in a game.
-                    The game includes several gameplay features through this system, including world and player persistence, achievements,
-                    leaderboards, and additional features required to facilitate these,
-                    such as a user account system and concurrent programming techniques to avoid application locks while queries were run.
-                    The entire project can be seen on a github repository <a target="_blank" href="https://github.com/btbertram/TeesU-GPP">here</a>.
-                </p>
-
-                <iframe class="jsremove" src="https://www.youtube.com/embed/tmxtAPeecyA" title="YouTube video player" frameborder="0"
-                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-
-                <noscript>
-                    <p>
-                        A video showcase of the project can be seen on YouTube <a href="https://www.youtube.com/embed/tmxtAPeecyA" target="_blank">with this link</a>.
+                        A small clip of the project demo can be seen on my Twitter <a href="https://twitter.com/Brennan_Bertram/status/1380340920508325889?ref_src=twsrc%5Etfw" target="_blank">at this link</a>.
                     </p>
                 </noscript>
 
