Added MazeGen video embed

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 </p>
 
                 <iframe class="jsremove" src="https://www.youtube.com/embed/52NqAlOfWWQ" title="YouTube video player" frameborder="0"
-                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                        allow="clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <noscript>
                     <p>
-                        A gameplay showcase video can be seen on YouTube <a href="https://www.youtube.com/embed/52NqAlOfWWQ" target="_blank">at this link</a>.
+                        A gameplay showcase video can be seen on YouTube <a href="https://youtu.be/52NqAlOfWWQ" target="_blank">at this link</a>.
                     </p>
                 </noscript>
 
@@ -88,11 +88,11 @@
                 </p>
 
                 <iframe class="jsremove" src="https://www.youtube.com/embed/tmxtAPeecyA" title="YouTube video player" frameborder="0"
-                        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                        allow="clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <noscript>
                     <p>
-                        A video showcase of the project can be seen on YouTube <a href="https://www.youtube.com/embed/tmxtAPeecyA" target="_blank">at this link</a>.
+                        A video showcase of the project can be seen on YouTube <a href="https://youtu.be/tmxtAPeecyA" target="_blank">at this link</a>.
                     </p>
                 </noscript>
 
@@ -106,6 +106,16 @@
                     letting enginners and designers work in tandem, while still keeping maintainable code.
                     This entire project can be seen on my github repository <a href="https://github.com/btbertram/UE4MazegenProject">at this link</a>.
                 </p>
+
+                <iframe class="jsremove" width="1903" height="758" src="https://www.youtube.com/embed/263IiCyRb_w" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                <noscript>
+                    <p>
+                        A video showcase of the project can be seen on YouTube <a href="https://youtu.be/263IiCyRb_w">at this link</a>.
+                    </p>
+                </noscript>
+
             </details>
 
             <details>
