About section update -Added headshot image -Adjusted bio

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
         <div id="aboutcontent" class="headlinecontent">
             <p>
-                I’m a Software Developer with a BSc in Computer Games Programming from Teesside University Middlesbrough,
-                with experience in Software Engineering. I have experience working with C#, C++, Unity Game Engine, Unreal Engine 4,
+                <img src="img/ProfileHeadshot.jpg" alt="Profile Picture of Brennan" style="float:left;width:200px;padding:0em 1em 1em 0em" />
+                I’m a Game Developer with a BSc in Computer Games Programming from Teesside University Middlesbrough, and I have
+                experience in Software Engineering from an internship at DuPont-Teijin Films. I use my experience working with C#, C++, Unity Game Engine, Unreal Engine 4,
                 and other tools and languages used to create games and other applications. When I’m not working on my personal projects,
                 I enjoy playing video games, travel, and using birdwatching to relax.
             </p>
