--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div id="aboutcontent" class="headlinecontent">
             <p>
-                <img src="img/ProfileHeadshot.jpg" alt="Profile Picture of Brennan" style="float:left;width:200px;padding:0em 1em 1em 0em" />
+                <img src="img/ProfileHeadshot.jpg" alt="Profile Picture of Brennan" style="width:200px;padding:0em 1em 1em 0em" />
                 I’m a Game Developer with a BSc in Computer Games Programming from Teesside University Middlesbrough, and I have
                 experience in Software Engineering from an internship at DuPont-Teijin Films. I use my experience working with C#, C++, Unity Game Engine, Unreal Engine 4,
                 and other tools and languages used to create games and other applications. When I’m not working on my personal projects,
